--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -1,42 +1,45 @@
 <html>
-  <head>
-    <%- include('commons/head'); -%>
-  </head>
-  <body>
+
+<head>
+  <%- include('commons/head'); -%>
+</head>
+
+<body>
   <%- include('commons/header'); -%>
-  <section class="container">
-    <h2>Contato</h2>
-    <p class="lead">Sinta-se a vontade para enviar-nos uma mensagem. Aceitamos todos os tipos de sugestões, reclamações ou elogios.
-      Somente desta forma, conseguiremos aperfeiçoar nosso produto para o cliente final.
-    </p>
-    <form action=# method="post" class="row" novalidate data-bs-theme="dark">
-      <div class="col-8 m-4">
-        <div class="form-floating mb-3">
-          <input type="text" id="nome" class="form-control" placeholder=" ">
-          <label for="nome" id="nome" class="form-label">Nome Completo</label>
+    <section class="container">
+      <h2>Contato</h2>
+      <p class="lead">Sinta-se a vontade para enviar-nos uma mensagem. Aceitamos todos os tipos de sugestões, reclamações ou elogios.
+        Somente desta forma, conseguiremos aperfeiçoar nosso produto para o cliente final.
+      </p>
+      <form action=# method="post" class="row" novalidate data-bs-theme="dark">
+        <div class="col-12 col-sm-10 col-md-8 col-lg-6 m-md-4">
+          <div class="form-floating mb-3">
+            <input type="text" id="nome" class="form-control" placeholder=" ">
+            <label for="nome" id="nome" class="form-label">Nome Completo</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="text" id="email" class="form-control" placeholder=" ">
+            <label for="email" class="form-label">E-mail</label>
+          </div>
+          <div class="form-floating mb-3">
+            <select id="assunto" class="form-select">
+              <option value="" disabled selected>Selecione a opção desejada...</option>
+              <option value="">Sugestão</option>
+              <option value="">Reclamação</option>
+              <option value="">Elogio</option>
+            </select>
+            <label for="assunto" class="form-label">Assunto</label>
+          </div>
+          <div class="form-floating mb-3">
+            <textarea id="mensagem" class="form-control" style="height: 80px;" placeholder=" "></textarea>
+            <label for="mensagem" class="form-label">Mensagem</label>
+          </div>
+          <button class="btn btn-comprar">Enviar</button>
         </div>
-        <div class="form-floating mb-3">
-          <input type="text" id="email" class="form-control" placeholder=" ">
-          <label for="email" class="form-label">E-mail</label>
-        </div>
-        <div class="form-floating mb-3">
-          <select id="assunto" class="form-select">
-            <option value="" disabled selected>Selecione a opção desejada...</option>
-            <option value="">Sugestão</option>
-            <option value="">Reclamação</option>
-            <option value="">Elogio</option>
-          </select>
-          <label for="assunto" class="form-label">Assunto</label>
-        </div>
-        <div class="form-floating mb-3">
-          <textarea id="mensagem" class="form-control" style="height: 80px;" placeholder=" "></textarea>
-          <label for="mensagem" class="form-label">Mensagem</label>
-        </div>
-        <button class="btn btn-comprar">Enviar</button>
-      </div>
-    </form>
-    
-  </section>
-  <%- include('commons/footer'); -%>
+      </form>
+
+    </section>
+    <%- include('commons/footer'); -%>
 </body>
+
 </html>
