--- a/views/produto.ejs
+++ b/views/produto.ejs
@@ -6,7 +6,7 @@
 
 <body>
   <%- include('commons/header'); -%>
-    <section class="container">
+    <section class="produto container">
       <div class="row">
         <div class="col-12 text-start">
           <img src='/img/<%= produto.img %>' class='image-produto float-end p-3'>
