--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -1,19 +1,29 @@
 <html>
+
 <head>
   <%- include('commons/head'); -%>
 </head>
+
 <body>
   <%- include('commons/header'); -%>
-  <section class="container">
-    <h2>Sobre</h2>
+    <section class="container">
+      <h2>Sobre</h2>
       <p class="lead">A LS CONNECT é uma empresa líder no setor de tecnologia móvel, fornecendo aos seus clientes dispositivos e acessórios de alta qualidade e serviços excepcionais. Fundada com o objetivo de oferecer a melhor experiência em compras de tecnologia móvel, a LS CONNECT é uma loja que preza pela satisfação do cliente, com uma equipe de especialistas prontos para ajudá-lo a encontrar o dispositivo ideal para suas necessidades.
-    </p><p class="lead">
-  Além disso, a LS CONNECT se compromete em oferecer um serviço de reparo rápido e confiável, com garantia de qualidade, para que você possa desfrutar do seu dispositivo sem preocupações. A LS CONNECT é a escolha ideal para quem procura um atendimento personalizado e produtos de alta qualidade no mundo da tecnologia móvel.
-    </p><p class="lead">
-  A LS CONNECT se orgulha em manter-se atualizada com as últimas tendências do mercado de tecnologia móvel e trabalhar com as principais marcas e fabricantes do setor. Acreditamos que a tecnologia deve ser acessível a todos e, por isso, trabalhamos para oferecer preços competitivos e promoções especiais em nossos produtos e serviços. Estamos sempre empenhados em fornecer aos nossos clientes a melhor experiência em tecnologia móvel, garantindo a qualidade e a confiabilidade de nossos produtos e serviços.
-  </p>
-  </section>
-  <%- include('commons/footer'); -%>
+      </p>
+      <p class="lead">
+        Além disso, a LS CONNECT se compromete em oferecer um serviço de reparo rápido e confiável, com garantia de qualidade, para que você possa desfrutar do seu dispositivo sem preocupações. A LS CONNECT é a escolha ideal para quem procura um atendimento personalizado e produtos de alta qualidade no mundo da tecnologia móvel.
+      </p>
+      <p class="lead">
+        A LS CONNECT se orgulha em manter-se atualizada com as últimas tendências do mercado de tecnologia móvel e trabalhar com as principais marcas e fabricantes do setor. Acreditamos que a tecnologia deve ser acessível a todos e, por isso, trabalhamos para oferecer preços competitivos e promoções especiais em nossos produtos e serviços. Estamos sempre empenhados em fornecer aos nossos clientes a melhor experiência em tecnologia móvel, garantindo a qualidade e a confiabilidade de nossos produtos e serviços.
+      </p>
+      <ul>
+        <li><a href="tel:+5528999991234">(28) 99999-1234</a></li>
+        <li><a href="https://github.com/lsconnect">Github</a></li>
+        <li><a href="https://reprograme-se.lsconnect.net.br">GH Pages @reprograme-se</a></li>
+        <li><a href="mailto:contato@lsconnect.net.br">contato@lsconnect.net.br</a></li>
+      </ul>
+    </section>
+    <%- include('commons/footer'); -%>
 </body>
+
 </html>
-  
